metadata/objects/fragment7_wide__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox101__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox101</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox102__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox102</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula318__c</fullName>
        <formula>true</formula>
        <label>Formula318</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula319__c</fullName>
        <formula>true</formula>
        <label>Formula319</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula320__c</fullName>
        <formula>true</formula>
        <label>Formula320</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextArea307__c</fullName>
        <label>LongTextArea307</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea308__c</fullName>
        <label>LongTextArea308</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea309__c</fullName>
        <label>LongTextArea309</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number154__c</fullName>
        <label>Number154</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number155__c</fullName>
        <label>Number155</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number156__c</fullName>
        <label>Number156</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>fragment7_wide</label>
    <nameField>
        <displayFormat>fragment7_wide-{0000000}</displayFormat>
        <label>fragment7_wide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>fragment7_wides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>